--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-elasticsearch==5.5.1
-elasticsearch-dsl==5.4.0
+elasticsearch==6.1.1
+elasticsearch-dsl==6.1.0
+ipaddress==1.0.19
+Pillow==5.0.0
 python-dateutil==2.6.1
+reportlab==3.4.0
 six==1.11.0
-urllib3==1.21.1
+urllib3==1.22
